
Isabelle NEWS -- history of user-visible changes
================================================

New in Isabelle???? (DATE ????)
-------------------------------

*** General Changes ***

* improved output of warnings (###) / errors (***);

* removed old README and Makefiles;

* defs may now be conditional; improved rewrite_goals_tac to handle
conditional equations;

* replaced print_goals_ref hook by print_current_goals_fn and
result_error_fn;

* removed obsolete init_pps and init_database;

* deleted the obsolete tactical STATE, which was declared by
    fun STATE tacfun st = tacfun st st;

* no longer handles consts "" -- use syntax instead;

* pretty printer: changed order of mixfix annotation preference
(again!);


*** Classical Reasoner ***

* Clarify_tac, clarify_tac, clarify_step_tac, Clarify_step_tac: new
tactics that use classical reasoning to simplify a subgoal without
splitting it into several subgoals;

* Safe_tac: like safe_tac but uses the default claset;


*** Simplifier ***

* added simplification meta rules:
    (asm_)(full_)simplify: simpset -> thm -> thm;

* simplifier.ML no longer part of Pure -- has to be loaded by object
logics (again);

* added prems argument to simplification procedures;


*** Syntax ***

* Pure: hierachically structured name spaces (for consts, types, thms,
...), use 'begin' or 'path' section in theory files; new lexical class
'longid' (e.g. Foo.bar.x) renders many old input syntactically
incorrect (e.g. "%x.x"); isatool fixdots inserts space after dots
("%x. x");

* Pure: fixed idt/idts vs. pttrn/pttrns syntactic categories;


*** HOL ***

* HOL/simplifier: terms of the form
  `? x. P1(x) & ... & Pn(x) & x=t & Q1(x) & ... Qn(x)' (or t=x)
  are rewritten to
  `P1(t) & ... & Pn(t) & Q1(t) & ... Qn(t)'

* HOL/Lists: the function "set_of_list" has been renamed "set" (and
its theorems too);


*** HOLCF ***

* HOLCF: fixed LAM <x,y,zs>.b syntax (may break some unusual cases);
